# swiftline

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
ARTIFACTS/: CLAUDE_AUDIT.md  PATCH_SUMMARY.md
ARTIFACTS/runs/: 2025-09-14T22-45-08_http_get_pretty.txt  2025-09-14T22-45-08_json_select_error.txt  2025-09-14T22-45-08_json_select_file.txt  2025-09-14T22-45-08_json_select_json5.txt  2025-09-14T22-45-08_json_select_strict.txt
src/: cli.rs  main.rs
src/commands/: http_get.rs  json_select.rs  mod.rs
src/helpers/: mod.rs  spinner.rs  style.rs
tests/: integration_test.rs
